fix(java): repair cyclic hash container lookups